--- a/main.css
+++ b/main.css
@@ -51,6 +51,12 @@ body {
     color:  #fa5a36;
 }
 
+.menu-image {
+    width: 100%;
+    height: 300px; /* Ajuste a altura conforme necessário */
+    object-fit: cover;
+}
+
 .social-links li{
     list-style: none;
     display: inline;
